# Laura

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
laura/: Cargo.toml
laura/src/: bitboard.rs  castle_rights.rs  lib.rs  move_list.rs  moves.rs  piece.rs  square.rs  zobrist.rs
laura_core/: CHANGELOG.md  README.md
laura_core/examples/: perft.rs
laura_core/src/: bitboard.rs  castle_rights.rs  color.rs  file.rs  lib.rs  macros.rs  move_list.rs  moves.rs  piece.rs  rank.rs  square.rs
laura_core/src/board/: board.rs  lookups.rs  movegen.rs  movemaker.rs
laura_core/tests/: test.rs
laura_engine/: Cargo.toml
laura_engine/src/: config.rs  engine.rs  evaluation.rs  lib.rs  main.rs  movepicker.rs  position.rs  search.rs  tables.rs  thread.rs  timer.rs  transposition.rs  uci.rs
src/: config.rs  evaluation.rs  lib.rs  movepicker.rs  position.rs  search.rs  sse.rs  tables.rs  thread.rs  timer.rs  transposition.rs  uci.rs
tests/: see.epd
