[workspace]
members = ["laura_core", "laura_engine"]
default-members = ["laura_core", "laura_engine"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 1