[package]
name = "laura_engine"
version = "1.1.0"
edition = "2024"
authors = ["HansTibberio <hanstiberio@proton.me>"]
rust-version = "1.85.0"

[dependencies]
laura_core = "0.4.0"

[[bin]]
name = "laura"
path = "src/main.rs"

[features]
bmi2 = ["laura_core/bmi2"]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 1